saya mencoba menyesuikan patien dan assesmentnya
